--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "illuminate/pagination": ">=5.5",
     "illuminate/console": ">=5.5",
     "elasticsearch/elasticsearch": "^7.17",
-    "erichard/elasticsearch-query-builder": "dev-upgrade-3#6da5cae72c53d4de03ea79a2550ae5216e3295f3",
+    "erichard/elasticsearch-query-builder": "dev-geo-bounding-box-query#9ff6960485a45e419368880214e58a795a8aa93a",
     "illuminate/validation": ">=5.5"
   },
   "require-dev": {
